# chinitsu-demo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  RULES.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  redis_test.py
.cursor/: PROJECT_STATUS.md
.cursor/rules/: chinitsu-showdown.mdc
.github/workflows/: cd.yml  ci.yml
deploy/: nginx.conf
docs/: asyncapi.yaml  asyncapi.zh.yaml  devlog-spectator-mode.md  index.html  room-module-dev-guide.md  spectator-mode-design.md
replay_files/: chinitsu-replay-1775110608807.json
server/: CLAUDE.md  agari_judge.py  app.py  auth.py  bot_player.py  database.py  game.py  managers.py  models.py  redis_client.py  replay.py  replay_codec.py  replay_recorder.py  start_server.py
server/chinitsu_server/: .gitignore  CLAUDE.md  README.zh.md
server/chinitsu_server/server/: conftest.py  (+5 more)
server/room/: CLAUDE.md  __init__.py  bot_service.py  chat_handler.py  end_decision_service.py  errors.py  match_end_evaluator.py  models.py  problem.md  protocol.py  push_service.py  ready_service.py  reconnect_manager.py  room_manager.py  room_module_design_v1.1.md  room_todo_list.md  snapshot_manager.py  state_machine.py  timeout_scheduler.py
server/scripts/: get_images.py
tests/: conftest.py  test_server.py
tests/room/: conftest.py  test_push_service.py  test_reconnect_manager.py  test_service_units.py  test_snapshot_manager.py  test_state_machine.py
web/: game.js  index.html  style.css
web-svelte/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
web-svelte/src/: app.css
(+43 files in other folders)
