[project]
name = "chinitsu-demo"
version = "0.1.0"
description = "Chinitsu Showdown - 清一色对战"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "websockets",
    "uvicorn[standard]",
    "mahjong",
    "requests",
    "passlib[bcrypt]",
    "bcrypt",
    "python-jose[cryptography]",
    "aiosqlite",
    "redis>=7.4.0",
]

[project.optional-dependencies]
test = ["pytest", "httpx"]

[tool.pytest.ini_options]
testpaths = ["tests", "server/room/tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
